--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+## mp4
+inke/Resources/login_video.mp4
+
 ## Framework
 IJKMediaFramework.framework
 
